# rust-ecs-comparison

./: Cargo.toml  ECS_COMPARISON.md  README.md  demo.sh  test_changes.sh  test_changes2.sh  test_mana.sh  test_orphans.sh  test_relations.sh
src/: bevy_ecs_example.rs  evenio_example.rs  flax_example.rs  flecs_example.rs  hecs_example.rs  main.rs  sparsey_example.rs
